tests/ui/attr_expected_sep.stderr
error: fixcol-derive error: Expected separator (',' character) or end of sequence.
 --> tests/ui/attr_expected_sep.rs:5:24
  |
5 |     #[fixcol(width = 5 align = right)]
  |                        ^^^^^
